# nav2_ws_new

./: README.md
src/nav2_robocon/: package.xml  setup.cfg  setup.py
src/nav2_robocon/config/: nav2_params.yaml
src/nav2_robocon/launch/: nav2_bringup.launch.py  third_area_single.launch.py
src/nav2_robocon/nav2_robocon/: cmd_vel_bridge.py  goal_relay_node.py  navigate_to_xyaw_server.py  odom_to_tf_node.py  ramp_zone_manager.py  third_area_single.py
src/nav2_robocon/scripts/: generate_map.py
src/nav2_robocon_msgs/: CMakeLists.txt  package.xml
src/nav2_robocon_msgs/action/: NavigateToXYaw.action
src/odin_ros_driver/log/Driver_20260524_021122/Conn_20260524_021122/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_023842/Conn_20260524_023842/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_024731/Conn_20260524_024731/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_024816/Conn_20260524_024816/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_030950/Conn_20260524_030950/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_032102/Conn_20260524_032102/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_040616/Conn_20260524_040616/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_041433/Conn_20260524_041434/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_043353/Conn_20260524_043353/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_052857/Conn_20260524_052857/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_053306/Conn_20260524_053306/: dev_status.csv
src/odin_ros_driver/log/Driver_20260524_055912/Conn_20260524_055912/: dev_status.csv
(+27 files in other folders)
