<?xml version="1.0"?>
<package format="3">
  <name>nav2_robocon</name>
  <version>0.1.0</version>
  <description>Nav2 integration for ROBOCON 2026 omnidirectional swerve-drive robot</description>
  <maintainer email="ares@todo.todo">ares</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>action_msgs</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_robocon_msgs</depend>

  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
